tests/snapshots/run_wpt_conformance__coreml_erf_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "erf.https.any.js",
    "erf float16 5D tensor",
    "coreml",
    "PASS",
)
