tests/snapshots/run_wpt_conformance__coreml_erf_float32_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "erf.https.any.js",
    "erf float32 1D constant tensor",
    "coreml",
    "PASS",
)
