tests/snapshots/run_wpt_conformance__coreml_erf_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "erf.https.any.js",
    "erf float32 3D tensor",
    "coreml",
    "PASS",
)
